ModelingLogicalSchemes: Реализовал чёрный ящик для моделирования работы схемы первого варианта.

--- a/ModelingLogicalSchemes/ModelingLogicalSchemes.Components/ModelingLogicalSchemes.Components.csproj
+++ b/ModelingLogicalSchemes/ModelingLogicalSchemes.Components/ModelingLogicalSchemes.Components.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Entities\BrokenTypes.cs" />
     <Compile Include="Entities\LogicalElement.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
+    <Compile Include="MagicalBlackBoxes\FirstBlackBox.cs" />
     <Compile Include="MagicalBlackBoxes\Interfaces\IBlackBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
