ModelingLogicalSchemes: Реализовал контроллер для чёрного ящика и вспомогательный класс для работы с входными значениями.

--- a/ModelingLogicalSchemes/ModelingLogicalSchemes.Components/ModelingLogicalSchemes.Components.csproj
+++ b/ModelingLogicalSchemes/ModelingLogicalSchemes.Components/ModelingLogicalSchemes.Components.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ModelingLogicalSchemes.Components</RootNamespace>
     <AssemblyName>ModelingLogicalSchemes.Components</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -50,9 +51,12 @@
     <Compile Include="Common\FunctionFactory.cs" />
     <Compile Include="Common\FunctionTypes.cs" />
     <Compile Include="Common\LogicalElementBuilder.cs" />
+    <Compile Include="Controllers\BlackBoxController.cs" />
     <Compile Include="Entities\BrokenTypes.cs" />
     <Compile Include="Entities\LogicalElement.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
+    <Compile Include="Helpers\InputValuesHelper.cs" />
+    <Compile Include="Interfaces\IBlackBoxController.cs" />
     <Compile Include="MagicalBlackBoxes\FirstBlackBox.cs" />
     <Compile Include="MagicalBlackBoxes\Interfaces\IBlackBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -60,7 +64,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
