--- a/ModelingLogicalSchemes/ModelingLogicalSchemes.UIShell/ModelingLogicalSchemes.UIShell.csproj
+++ b/ModelingLogicalSchemes/ModelingLogicalSchemes.UIShell/ModelingLogicalSchemes.UIShell.csproj
@@ -53,6 +53,12 @@
     <Compile Include="InformationForm.Designer.cs">
       <DependentUpon>InformationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="InputValuesGeneratorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputValuesGeneratorForm.Designer.cs">
+      <DependentUpon>InputValuesGeneratorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShellForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="InformationForm.resx">
       <DependentUpon>InformationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputValuesGeneratorForm.resx">
+      <DependentUpon>InputValuesGeneratorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ShellForm.resx">
       <DependentUpon>ShellForm.cs</DependentUpon>
