CDPHomeWorks: ExceptionHandling 3 Basic. Re-implement the NetworkSender.

--- a/CDPHomeWorks/ExceptionHandling_3_Basic/AlehSkamarokhau.ExceptionHandling3Basic/ExceptionHandling3Basic/ExceptionHandling3Basic.csproj
+++ b/CDPHomeWorks/ExceptionHandling_3_Basic/AlehSkamarokhau.ExceptionHandling3Basic/ExceptionHandling3Basic/ExceptionHandling3Basic.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="INetworkSender.cs" />
-    <Compile Include="NetworkSender.cs" />
+    <Compile Include="StackNetworkSender.cs" />
     <Compile Include="NetworkSenderEventArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
